--- a/frontend/src/templates/upload.html
+++ b/frontend/src/templates/upload.html
@@ -3,27 +3,21 @@
  <fieldset>
    <legend>Upload Product</legend>
    <div class="form-group has-success has-feedback">
-     <label>Name</label>
-     <input type="text" ng-model="uploadData.Name" class="form-control" placeholder="Product name" />
+    <label>Product Name</label>
+     <input type="text" ng-model="uploadData.Name" class="form-control" />
    </div>
    <div class="form-group has-success has-feedback">
-     <label>Price</label>
-     <input type="text" ng-model="uploadData.Price" class="form-control" placeholder="Price" />
+    <label>Price</label>
+    <input type="text" ng-model="uploadData.Price" class="form-control" />
    </div>
    <div class="form-group has-success has-feedback">
-     <label>Shop Name</label>
-     <input type="text" ng-model="uploadData.Shop" class="form-control" placeholder="Shop Name" />
-   </div>
-   <div class="form-group has-success has-feedback">
-     <label>Shop location</label>
-     <input type="text" ng-model="uploadData.Location" class="form-control" placeholder="Shop Location" />
+     <label>Description</label>
+     <textarea ng-model="uploadData.Description" class="form-control" ></textarea>
    </div>
    <button class="btn btn-primary btn-block">
      Upload
    </button>
-   <div ui-content-for="navbarAction">
-     <a class='btn' ng-click='upload()'>Login</a>
-   </div>
  </fieldset>
 </form>
 </div>
+
