detaul product page

--- a/frontend/src/less/app.less
+++ b/frontend/src/less/app.less
@@ -147,3 +147,23 @@ li {
     color: #666;
     text-align: left;
 }
+
+h1 {
+    font-weight: 500;
+    font-size: 1.15em;
+    letter-spacing: .02em;
+    text-transform: uppercase;
+    color: #666;
+}
+
+.product-detail-price {
+    color: #ff5722;
+    font-size: 1.3em;
+}
+
+.details-header-new {
+    color: #666;
+    font-size: 1.05em;
+    font-weight: 600;
+    margin-top: 10px;
+}
