--- a/frontend/src/templates/sidebar.html
+++ b/frontend/src/templates/sidebar.html
@@ -7,6 +7,7 @@
       <a class="list-group-item" href="#/">Home <i class="fa fa-chevron-right pull-right"></i></a>
       <a class="list-group-item" href="#/products">Products <i class="fa fa-chevron-right pull-right"></i></a>
       <a class="list-group-item" href="#/upload">Upload <i class="fa fa-chevron-right pull-right"></i></a> 
+      <a class="list-group-item" href="#/detail">Detail <i class="fa fa-chevron-right pull-right"></i></a> 
     </div>
   </div>
 </div>
