--- a/frontend/src/templates/products.html
+++ b/frontend/src/templates/products.html
@@ -1,19 +1,23 @@
 <div class="scrollable">
   <div class="scrollable-content section" ng-controller="ProductsController">
+    <div class="info" ng-if="pendingUpload == '-'">
+      No Pending Upload
+    </div>
+    <div class='productList-wrapper' ng-if="pendingUpload != '-'">
       <div>Uploading</div>
       <ul>
         <li ng-repeat="item in data">
           <div class="row-fluid product-catalog-wrapper">
             <figure>
-              <a href="https://m.tokopedia.com/catalog/50764/apple-iphone-se---16-gb" class="relative">
-                <img width="90" itemprop="image" class="" src="https://ecs7.tokopedia.net/img/cache/200-square/catalog/2016/4/5/513086/513086_c2948249-dca5-4d7a-9577-1b3a44bd1d72.jpeg" alt="Apple iPhone SE - 16 GB" data-original="https://ecs7.tokopedia.net/img/cache/200-square/catalog/2016/4/5/513086/513086_c2948249-dca5-4d7a-9577-1b3a44bd1d72.jpeg" style="display: inline;">
+              <a href="{{item.images[0].url}}" class="relative">
+              <img width="90" itemprop="image" class="" src="{{item.images[0].url}}" alt="{{item.name}}" data-original="{{item.images[0].url}}" style="display: inline;">
               </a>
             </figure>
             <div class="">
               <a href="https://m.tokopedia.com/catalog/50764/apple-iphone-se---16-gb">
-                <span class="product-list-name ellipsis">Apple iPhone SE - 16 GB</span>
+                <span class="product-list-name ellipsis">{{item.name}}</span>
                 <div class="row-fluid product-catalog-price">
-                  <span class="product-catalog-price font-orange bold">Rp 6.100.000</span>
+                  <span class="product-catalog-price font-orange bold">{{item.price}}</span>
                 </div>
               </a>
             </div>
@@ -21,21 +25,22 @@
           <div class="clearfix"></div>
         </li>
       </ul>
-
+    </div>
+    <div class='productList-wrapper'>
       <div>List Products</div>
       <ul>
         <li ng-repeat="item in data">
           <div class="row-fluid product-catalog-wrapper">
             <figure>
-              <a href="https://m.tokopedia.com/catalog/50764/apple-iphone-se---16-gb" class="relative">
-                <img width="90" itemprop="image" class="" src="https://ecs7.tokopedia.net/img/cache/200-square/catalog/2016/4/5/513086/513086_c2948249-dca5-4d7a-9577-1b3a44bd1d72.jpeg" alt="Apple iPhone SE - 16 GB" data-original="https://ecs7.tokopedia.net/img/cache/200-square/catalog/2016/4/5/513086/513086_c2948249-dca5-4d7a-9577-1b3a44bd1d72.jpeg" style="display: inline;">
+              <a href="{{item.images[0].url}}" class="relative">
+              <img width="90" itemprop="image" class="" src="{{item.images[0].url}}" alt="{{item.name}}" data-original="{{item.images[0].url}}" style="display: inline;">
               </a>
             </figure>
             <div class="">
               <a href="https://m.tokopedia.com/catalog/50764/apple-iphone-se---16-gb">
-                <span class="product-list-name ellipsis">Apple iPhone SE - 16 GB</span>
+                <span class="product-list-name ellipsis">{{item.name}}</span>
                 <div class="row-fluid product-catalog-price">
-                  <span class="product-catalog-price font-orange bold">Rp 6.100.000</span>
+                  <span class="product-catalog-price font-orange bold">{{item.price}}</span>
                 </div>
               </a>
             </div>
@@ -45,4 +50,5 @@
       </ul>
     </div>
   </div>
+</div>
 </div>
