product detail page

--- a/frontend/src/templates/detail.html
+++ b/frontend/src/templates/detail.html
@@ -1,21 +1,24 @@
 <div class="scrollable-content section">
   <section class="image-slideshow mb-0">
-      <div class="single-image">
-          <div class="swiper-container prodDetail-swiper">
-              <div class="swiper-wrapper">
-                  <div class="swiper-slide single-image__slide">
-                      <img class="" src="https://ecs7.tokopedia.net/img/cache/200-square/catalog/2016/4/5/513086/513086_c2948249-dca5-4d7a-9577-1b3a44bd1d72.jpeg"  />
-                  </div>
-                  <div class="swiper-slide single-image__slide">
-                      <img class="" src="https://ecs7.tokopedia.net/img/cache/200-square/catalog/2016/4/5/513086/513086_c2948249-dca5-4d7a-9577-1b3a44bd1d72.jpeg"  />
-                  </div>
-                  <div class="swiper-slide single-image__slide">
-                      <img class="" src="https://ecs7.tokopedia.net/img/cache/200-square/catalog/2016/4/5/513086/513086_c2948249-dca5-4d7a-9577-1b3a44bd1d72.jpeg"  />
-                  </div>
-              </div>
-              <div class="swiper-pagination"></div>
-          </div>
-      </div>
+    <div class="z-slide-wrap" id="product-slide">
+      <ul class="z-slide-content">
+          <li class="z-slide-item">
+              <div class="images"> 
+                <img src="https://ecs7.tokopedia.net/img/cache/700/catalog/2016/4/5/513086/513086_c2948249-dca5-4d7a-9577-1b3a44bd1d72.jpeg"> 
+             </div>
+          </li>
+          <li class="z-slide-item">
+              <div class="images"> 
+                <img src="https://ecs7.tokopedia.net/img/cache/700/catalog/2016/4/5/513086/513086_c2948249-dca5-4d7a-9577-1b3a44bd1d72.jpeg"> 
+             </div>
+          </li>
+          <li class="z-slide-item">
+              <div class="images"> 
+                <img src="https://ecs7.tokopedia.net/img/cache/700/catalog/2016/4/5/513086/513086_c2948249-dca5-4d7a-9577-1b3a44bd1d72.jpeg"> 
+             </div>
+          </li>
+      </ul>
+    </div>
   </section>
   <section class="section container-fluid">
     <div class="ml-10 mr-10 product-detail__header mb-0">
