--- a/frontend/src/less/zSlider.css
+++ b/frontend/src/less/zSlider.css
@@ -56,6 +56,7 @@
   margin-right: 0.2rem;
   border-radius: 50%;
   background-color: #ffffff;
+  border: 1px solid #aaa;
 }
 .z-slide-indicator .z-slide-dot.active {
   background-color: #099fde;
