use controller for init slider

--- a/frontend/src/templates/detail.html
+++ b/frontend/src/templates/detail.html
@@ -1,4 +1,4 @@
-<div class="scrollable-content section">
+<div class="scrollable-content section" ng-controller="DetailController" data-ng-init="init()">
   <section class="image-slideshow mb-0">
     <div class="z-slide-wrap" id="product-slide">
       <ul class="z-slide-content">
