test alert from homescreen

--- a/frontend/src/less/app.less
+++ b/frontend/src/less/app.less
@@ -167,3 +167,27 @@ h1 {
     font-weight: 600;
     margin-top: 10px;
 }
+
+.product-catalog-wrapper {
+    border: 1px solid #efefef;
+    margin-bottom: 10px;
+    background-color: #fff;
+    min-height: 92px;
+}
+
+.productList-title {
+  margin-bottom: 10px;
+  color: #666;
+}
+
+.productList-wrapper ul {
+  padding-left: 0;
+}
+
+.productList-wrapper .info {
+  padding-top: 5px;
+}
+
+.productList-wrapper .info-data {
+  min-height: 92px;
+}
