--- a/frontend/src/templates/products.html
+++ b/frontend/src/templates/products.html
@@ -1,5 +1,5 @@
 <div class="scrollable">
-  <div class="scrollable-content section" ng-controller="ProductsController">
+  <div class="scrollable-content section" ng-controller="ProductsController" ng-intro-options="IntroOptions" ng-intro-method="CallMe">
 <!--     <div class="info text-center" ng-if="pendingUpload == '-'">
       <strong><h3>No Pending Upload</h3></strong>
     </div> -->
@@ -7,7 +7,7 @@
       <div class="productList-title"><strong>Uploading</strong></div>
       <ul>
         <li ng-repeat="item in data">
-          <div class="row-fluid product-catalog-wrapper">
+          <div class="row-fluid product-catalog-wrapper uploading">
             <figure>
               <a href="{{item.images[0].url}}" class="relative">
               <img width="90" itemprop="image" class="" src="{{item.images[0].url}}" alt="{{item.name}}" data-original="{{item.images[0].url}}" style="display: inline;">
@@ -28,7 +28,7 @@
         </li>
       </ul>
     </div>
-    <div class="productList-wrapper">
+    <div id="product-list" class="productList-wrapper">
       <div class="productList-title"><strong>List Products</strong></div>
       <ul>
         <li ng-repeat="item in data">
@@ -36,8 +36,8 @@
             <figure>
               <a href="{{item.images[0].url}}" class="relative">
               <img width="90" itemprop="image" class="" src="{{item.images[0].url}}" alt="{{item.name}}" data-original="{{item.images[0].url}}" style="display: inline;">
-              <!-- <img width="90" itemprop="image" class="" src="https://ecs7.tokopedia.net/img/cache/200-square/catalog/2016/3/30/621832/621832_226d5e78-1739-42fa-afa6-92e6b5494cc5.jpg" alt="{{item.name}}" data-original="{{item.images[0].url}}" style="display: inline;">
-              </a> -->
+              <!-- <img width="90" itemprop="image" class="" src="https://ecs7.tokopedia.net/img/cache/200-square/catalog/2016/3/30/621832/621832_226d5e78-1739-42fa-afa6-92e6b5494cc5.jpg" alt="{{item.name}}" data-original="{{item.images[0].url}}" style="display: inline;">-->
+              </a>
             </figure>
             <div class="info">
               <a href="https://m.tokopedia.com/catalog/50764/apple-iphone-se---16-gb">
