toast online & offlinet

--- a/frontend/src/less/app.less
+++ b/frontend/src/less/app.less
@@ -202,7 +202,11 @@ h1 {
 }
 
 .bg-green-42 {
-    background-color: #42b549!important;
+  background-color: #42b549!important;
+}
+
+.bg-offline {
+  background-color: #666!important;
 }
 
 .topbar-logo-wrapper a {
