--- a/frontend/src/less/app.less
+++ b/frontend/src/less/app.less
@@ -203,10 +203,12 @@ h1 {
 
 .bg-green-42 {
   background-color: #42b549!important;
+  border-color: #42b549;
 }
 
 .bg-offline {
   background-color: #666!important;
+  border-color: #666;
 }
 
 .topbar-logo-wrapper a {
