--- a/frontend/src/less/app.less
+++ b/frontend/src/less/app.less
@@ -229,3 +229,17 @@ h1 {
 .offline {
   opacity: 0.5;
 }
+
+.btn-primary {
+    background-color: #42b549;
+    border-color: #42b549;
+}
+
+.legend, pre {
+    display: block;
+    color: #666;
+}
+
+.body {
+  color: #666;
+}
