--- a/frontend/src/templates/detail.html
+++ b/frontend/src/templates/detail.html
@@ -1,10 +1,10 @@
 <div class="scrollable-content section" ng-controller="DetailController">
   <section class="image-slideshow mb-0">
-    <div class="z-slide-wrap" id="product-slide">
-      <ul class="z-slide-content">        
+    <div class="z-slide-wrap">
+      <ul id="product-slide" class="z-slide-content">        
           <li ng-repeat="image in data.images" slide-repeat-directive class="z-slide-item">
               <div class="images"> 
-                <img src="{{image.url}}"> 
+                <img ng-src="{{image.url}}"> 
              </div>
           </li>
       </ul>
