--- a/frontend/src/templates/products.html
+++ b/frontend/src/templates/products.html
@@ -10,7 +10,7 @@
           <div class="row-fluid product-catalog-wrapper">
             <figure  ng-if="pendingItem.images.length > 0">
               <a href="{{pendingItem.images[0].url}}" class="relative" ng-if="pendingItem.images.length > 0">
-              <img width="90" itemprop="image" class="" src="{{pendingItem.images[0].url}}" alt="{{pendingItem.name}}" 
+              <img width="90" itemprop="image" class="" ng-src="{{pendingItem.images[0].url}}" alt="{{pendingItem.name}}" 
                 data-original="{{pendingItem.images[0].url}}" style="display: inline;">
               </a>
             </figure>
@@ -35,8 +35,8 @@
         <li ng-repeat="item in data">
           <div class="row-fluid product-catalog-wrapper">
             <figure>
-              <a href="{{item.images[0].url}}" class="relative">
-              <img width="90" itemprop="image" class="" src="{{item.images[0].url}}" alt="{{item.name}}" data-original="{{item.images[0].url}}" style="display: inline;">
+              <a href="/#/detail/{{item.id}}" class="relative">
+              <img width="90" itemprop="image" class="" ng-src="{{item.images[0].url}}" alt="{{item.name}}" data-original="{{item.images[0].url}}" style="display: inline;">
               </a>
             </figure>
             <div class="info">
