--- a/frontend/src/templates/products.html
+++ b/frontend/src/templates/products.html
@@ -9,9 +9,9 @@
         <li ng-repeat="pendingItem in pendingUpload">
           <div class="row-fluid product-catalog-wrapper">
             <figure>
-              <a href="{{pendingItem.images[0].url}}" class="relative">
-              <img width="90" itemprop="image" class="" src="{{pendingItem.images[0].url}}" alt="{{pendingItem.name}}" 
-                data-original="{{pendingItem.images[0].url}}" style="display: inline;">
+              <a href="#" class="relative" onclick="return false">
+              <img width="90" itemprop="image" class="" src="/images/pending_image.png" alt="{{pendingItem.name}}" 
+                data-original="/images/pending_image.png" style="display: inline;">
               </a>
             </figure>
             <div class="info">
