add status cached

--- a/frontend/src/less/app.less
+++ b/frontend/src/less/app.less
@@ -201,6 +201,11 @@ h1 {
   min-height: 92px;
 }
 
+.productList-wrapper .product-status {
+  color: #999;
+  font-size: 12px!important;
+}
+
 .bg-green-42 {
   background-color: #42b549!important;
   border-color: #42b549;
