--- a/frontend/src/templates/products.html
+++ b/frontend/src/templates/products.html
@@ -54,6 +54,7 @@
                   <div class="row-fluid product-catalog-price">
                     <span class="product-catalog-price font-orange bold">Rp {{item.price}}</span>
                   </div>
+                  <span ng-if="item.status != 'unavailable'" class="product-status">Cached</span>
                 </div>
               </a>
             </div>
