--- a/frontend/src/templates/products.html
+++ b/frontend/src/templates/products.html
@@ -3,19 +3,20 @@
     <div class='productList-wrapper' ng-if="pendingUpload != '-'">
       <div class="productList-title"><strong>Uploading</strong></div>
       <ul>
-        <li ng-repeat="item in pendingUpload">
+        <li ng-repeat="pendingItem in pendingUpload">
           <div class="row-fluid product-catalog-wrapper">
             <figure>
-              <a href="{{item.images[0].url}}" class="relative">
-              <img width="90" itemprop="image" class="" src="{{item.images[0].url}}" alt="{{item.name}}" data-original="{{item.images[0].url}}" style="display: inline;">
+              <a href="{{pendingItem.images[0].url}}" class="relative">
+              <img width="90" itemprop="image" class="" src="{{pendingItem.images[0].url}}" alt="{{pendingItem.name}}" 
+                data-original="{{pendingItem.images[0].url}}" style="display: inline;">
               </a>
             </figure>
             <div class="info">
               <a href="https://m.tokopedia.com/catalog/50764/apple-iphone-se---16-gb">
                 <div class="info-data">
-                  <span class="product-list-name ellipsis">{{item.name}}</span>
+                  <span class="product-list-name ellipsis">{{pendingItem.Name}}</span>
                   <div class="row-fluid product-catalog-price">
-                    <span class="product-catalog-price font-orange bold">Rp {{item.price}}</span>
+                    <span class="product-catalog-price font-orange bold">Rp {{pendingItem.Price}}</span>
                   </div>
                 </div>
               </a>
