--- a/frontend/src/templates/products.html
+++ b/frontend/src/templates/products.html
@@ -10,12 +10,14 @@
       <ul>
         <li ng-repeat="pendingItem in pendingUpload">
           <div class="row-fluid product-catalog-wrapper">
-            <img width="90" itemprop="image" class="" ng-src="https://hackathon.tokopedia.com/images/pending_image.png" alt="{{pendingItem.name}}" style="display: inline;">
+            <figure>
+              <img width="90" itemprop="image" class="" ng-src="https://hackathon.tokopedia.com/images/pending_image.png" alt="{{pendingItem.name}}" style="display: inline;">
+            </figure>
             <div class="info">
                 <div class="info-data">
                   <span class="product-list-name ellipsis">{{pendingItem.Name}}</span>
                   <div class="row-fluid product-catalog-price">
-                    <span class="product-catalog-price font-orange bold">Rp {{pendingItem.Price}}</span>
+                    <span class="product-catalog-price font-orange bold">{{pendingItem.Price | currency:"Rp ":0}}</span>
                   </div>
                 </div>
             </div>
