--- a/frontend/src/templates/products.html
+++ b/frontend/src/templates/products.html
@@ -8,7 +8,7 @@
     <div class='productList-wrapper' ng-if="pendingUpload.length > 0">
       <div class="productList-title"><strong>Uploading</strong></div>
       <ul>
-        <li ng-repeat="pendingItem in pendingUpload">
+        <li class="offline" ng-repeat="pendingItem in pendingUpload">
           <div class="row-fluid product-catalog-wrapper">
             <figure>
               <img width="90" itemprop="image" class="" ng-src="https://hackathon.tokopedia.com/images/pending_image.png" alt="{{pendingItem.name}}" style="display: inline;">
