--- a/frontend/src/templates/products.html
+++ b/frontend/src/templates/products.html
@@ -3,13 +3,13 @@
 <!--     <div class="info text-center" ng-if="pendingUpload == '-'">
       <strong><h3>No Pending Upload</h3></strong>
     </div> -->
-    <div class='productList-wrapper' ng-if="pendingUpload != '-'">
+    <div class='productList-wrapper' ng-if="pendingUpload.length > 0">
       <div class="productList-title"><strong>Uploading</strong></div>
       <ul>
         <li ng-repeat="pendingItem in pendingUpload">
           <div class="row-fluid product-catalog-wrapper">
-            <figure>
-              <a href="{{pendingItem.images[0].url}}" class="relative">
+            <figure  ng-if="pendingItem.images.length > 0">
+              <a href="{{pendingItem.images[0].url}}" class="relative" ng-if="pendingItem.images.length > 0">
               <img width="90" itemprop="image" class="" src="{{pendingItem.images[0].url}}" alt="{{pendingItem.name}}" 
                 data-original="{{pendingItem.images[0].url}}" style="display: inline;">
               </a>
@@ -34,7 +34,7 @@
       <ul>
         <li ng-repeat="item in data">
           <div class="row-fluid product-catalog-wrapper">
-            <figure>
+            <figure ng-if="item.images.length > 0">
               <a href="{{item.images[0].url}}" class="relative">
               <img width="90" itemprop="image" class="" src="{{item.images[0].url}}" alt="{{item.name}}" data-original="{{item.images[0].url}}" style="display: inline;">
               </a>
