--- a/frontend/src/templates/products.html
+++ b/frontend/src/templates/products.html
@@ -34,7 +34,7 @@
       <ul>
         <li ng-repeat="item in data">
           <div class="row-fluid product-catalog-wrapper">
-            <figure ng-if="item.images.length > 0">
+            <figure>
               <a href="{{item.images[0].url}}" class="relative">
               <img width="90" itemprop="image" class="" src="{{item.images[0].url}}" alt="{{item.name}}" data-original="{{item.images[0].url}}" style="display: inline;">
               </a>
