--- a/frontend/src/templates/products.html
+++ b/frontend/src/templates/products.html
@@ -46,6 +46,9 @@
                   <div class="row-fluid product-catalog-price">
                     <span class="product-catalog-price font-orange bold">Rp {{item.price}}</span>
                   </div>
+                  <div class="row-fluid product-cacheStatus">
+                    <span class="bold">{{item.status}}</span>
+                  </div>
                 </div>
               </a>
             </div>
