--- a/frontend/src/templates/products.html
+++ b/frontend/src/templates/products.html
@@ -39,22 +39,13 @@
               <img width="90" itemprop="image" class="" ng-src="{{item.images[0].url}}" alt="{{item.name}}" data-original="{{item.images[0].url}}" style="display: inline;">
               </a>
             </figure>
-            <div class="info">
-              <a ng-show="item.status == 'unavailable' && !online" href="javascript:;">
-               <div class="info-data offline">
-                  <span class="product-list-name ellipsis">{{item.name}}</span>
-                  <div class="row-fluid product-catalog-price">
-                    <span class="product-catalog-price font-orange bold">Rp {{item.price}}</span>
-                  </div>
-                </div>
-              </a>
-              <a ng-show="item.status != 'unavailable' || online" href="/#/detail/{{item.id}}">
+              <a href="/#/detail/{{item.id}}">
                <div class="info-data">
                   <span class="product-list-name ellipsis">{{item.name}}</span>
                   <div class="row-fluid product-catalog-price">
                     <span class="product-catalog-price font-orange bold">Rp {{item.price}}</span>
                   </div>
-                  <span ng-if="item.status != 'unavailable'" class="product-status">Cached</span>
+                  <span ng-if="item.status != 'unavailable' && item.status != ''" class="product-status">Cached</span>
                 </div>
               </a>
             </div>
