add push notif handler

--- a/frontend/src/templates/upload.html
+++ b/frontend/src/templates/upload.html
@@ -8,7 +8,7 @@
    </div>
    <div class="form-group has-success has-feedback">
     <label>Price</label>
-    <input type="text" ng-model="uploadData.Price" class="form-control" />
+    <input type="tel" ng-model="uploadData.Price" class="form-control" />
    </div>
    <div class="form-group has-success has-feedback">
      <label>Description</label>
