--- a/frontend/src/templates/products.html
+++ b/frontend/src/templates/products.html
@@ -10,8 +10,8 @@
           <div class="row-fluid product-catalog-wrapper">
             <figure  ng-if="pendingItem.images.length > 0">
               <a href="{{pendingItem.images[0].url}}" class="relative" ng-if="pendingItem.images.length > 0">
-              <img width="90" itemprop="image" class="" ng-src="{{pendingItem.images[0].url}}" alt="{{pendingItem.name}}" 
-                data-original="{{pendingItem.images[0].url}}" style="display: inline;">
+              <img width="90" itemprop="image" class="" ng-src="https://hackathon.tokopedia.com/images/pending_image.png" alt="{{pendingItem.name}}" 
+                data-original="https://hackathon.tokopedia.com/images/pending_image.png" style="display: inline;">
               </a>
             </figure>
             <div class="info">
@@ -36,7 +36,7 @@
           <div class="row-fluid product-catalog-wrapper">
             <figure>
               <a href="/#/detail/{{item.id}}" class="relative">
-              <img width="90" itemprop="image" class="" ng-src="{{item.images[0].url}}" alt="{{item.name}}" data-original="{{item.images[0].url}}" style="display: inline;">
+              <img width="90" itemprop="image" class="" ng-src="{{item.images[0].url || 'https://hackathon.tokopedia.com/images/broken_image.png'}}" alt="{{item.name}}" data-original="{{item.images[0].url}}" style="display: inline;">
               </a>
             </figure>
               <a href="/#/detail/{{item.id}}">
