--- a/frontend/src/templates/detail.html
+++ b/frontend/src/templates/detail.html
@@ -23,8 +23,8 @@
         <div>{{data.description}}</div>
       </div>
     </div>
-    <div class="ml-10 mr-10 product-detail__header mb-0" ng-if="!data.name">
-      <div style="'top':50%,'left':50%">You're offline</div>
+    <div align='center' ng-if="!data.name">
+      <div text-align="center"><h2>You're offline</h2></div>
       <img src='/images/offline.png' />
     </div>
 
