--- a/frontend/src/templates/products.html
+++ b/frontend/src/templates/products.html
@@ -1,3 +1,5 @@
+
+<img src="https://hackathon.tokopedia.com/images/pending_image.png" style="display:none" />
 <div class="scrollable">
   <div class="scrollable-content section" ng-controller="ProductsController">
 <!--     <div class="info text-center" ng-if="pendingUpload == '-'">
@@ -8,21 +10,14 @@
       <ul>
         <li ng-repeat="pendingItem in pendingUpload">
           <div class="row-fluid product-catalog-wrapper">
-            <figure  ng-if="pendingItem.images.length > 0">
-              <a href="{{pendingItem.images[0].url}}" class="relative" ng-if="pendingItem.images.length > 0">
-              <img width="90" itemprop="image" class="" ng-src="https://hackathon.tokopedia.com/images/pending_image.png" alt="{{pendingItem.name}}" 
-                data-original="https://hackathon.tokopedia.com/images/pending_image.png" style="display: inline;">
-              </a>
-            </figure>
+            <img width="90" itemprop="image" class="" ng-src="https://hackathon.tokopedia.com/images/pending_image.png" alt="{{pendingItem.name}}" style="display: inline;">
             <div class="info">
-              <a href="{{item.linkToDetail}}">
                 <div class="info-data">
                   <span class="product-list-name ellipsis">{{pendingItem.Name}}</span>
                   <div class="row-fluid product-catalog-price">
                     <span class="product-catalog-price font-orange bold">Rp {{pendingItem.Price}}</span>
                   </div>
                 </div>
-              </a>
             </div>
           </div>
           <div class="clearfix"></div>
